implement auto ban for rank